feat: add Navbar & AppLink

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,7 @@
 @import "themes/light";
 
 .app {
-  font: $font-m;
+  font: var(--font-m);
   background-color: var(--bg-color);
   color: var(--primary-color);
 
