--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,9 @@
 .app.dark {
   --bg-color: #07015e;
+  --inverted-bg-color: #b8b8b8;
+
   --secondary-color: #00bb10;
   --primary-color: #026d0b;
+  --inverted-primary-color: #03007a;
+  --inverted-secondary-color: #000ed4;
 }
