--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,9 @@
 .app.light {
   --bg-color: #b8b8b8;
+  --inverted-bg-color: #07015e;
+
   --primary-color: #03007a;
   --secondary-color: #000ed4;
+  --inverted-secondary-color: #026d0b;
+  --inverted-primary-color: #00bb10;
 }
