feat: add ThemeSwwitcher

--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -3,9 +3,9 @@
 }
 
 .primary {
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .secondary {
-  color: var(--inverted-secondary-color);
+  color: var(--inverted-primary-color);
 }
